--- a/index.html
+++ b/index.html
@@ -7,40 +7,38 @@
     <style>
         /* --- ESTILOS GENERALES Y AJUSTABLES --- */
         body {
-            /* Fondo de la página */
             background-color: #d927cc;
-            /* Color del texto fuera del formulario */
             color: white;
             font-family: Arial, sans-serif;
             margin: 0;
+            padding: 20px 1.5mm; /* Margen de 1.5mm en los lados */
             display: flex;
-            flex-direction: column; /* Para que los elementos se apilen correctamente */
-            align-items: center; /* Centrar horizontalmente */
+            justify-content: center; /* Centra el contenido horizontalmente */
+            align-items: flex-start;
             min-height: 100vh;
-            padding-top: 20px;
-            padding-bottom: 20px;
+            box-sizing: border-box;
         }
 
         .main-container {
             max-width: 600px;
             width: 100%;
             background-color: transparent;
-            padding-left: 10px; /* Pequeño margen izquierdo */
-            padding-right: 10px; /* Pequeño margen derecho */
             text-align: center;
+            display: flex;
+            flex-direction: column; /* Apila los elementos verticalmente */
+            align-items: center; /* Centra los elementos dentro del contenedor */
         }
 
         /* --- ESTILOS PARA LA IMAGEN DE BIENVENIDA --- */
         .welcome-image-container {
             margin-bottom: 20px;
-            width: 100%; /* La imagen ocupa todo el ancho del contenedor principal */
-            max-width: 600px; /* Evita que la imagen sea más ancha que el contenedor */
+            width: 100%;
         }
         .welcome-image-container img {
             width: 100%;
             height: auto;
-            border-radius: 17px; /* Borde redondeado de la imagen */
-            display: block; /* Evita espacio extra debajo de la imagen */
+            border-radius: 17px;
+            display: block;
         }
 
         /* --- ESTILOS PARA LOS RECTÁNGULOS DE TEXTO --- */
@@ -50,36 +48,32 @@
             padding: 15px;
             margin-bottom: 10px;
             text-align: center;
-            color: black; /* El texto dentro de los recuadros es negro */
-            width: 100%; /* Ocupan todo el ancho del contenedor */
-            box-sizing: border-box; /* Incluye el padding y el borde en el ancho */
+            color: black;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .text-rectangle.large {
-            /* TAMAÑO DEL TEXTO GRANDE (BIENVENIDA) - Ajusta aquí */
             font-size: 23pt;
-            font-weight: normal; /* Texto en normal */
+            font-weight: normal;
         }
 
         .text-rectangle.small {
-            /* TAMAÑO DEL TEXTO PEQUEÑO - Ajusta aquí */
             font-size: 15pt;
-            font-weight: normal; /* Texto en normal */
+            font-weight: normal;
             line-height: 1.4;
         }
 
         /* --- ESTILOS PARA EL FORMULARIO --- */
         .form-container {
             background-color: #fdd2fd;
-            /* GROSOR DEL CONTORNO DEL FORMULARIO - 1px es el mínimo visible */
-            /* COLOR DEL CONTORNO DEL FORMULARIO (GRIS SUAVE) - Ajusta aquí el color si lo deseas */
             border: 1px solid #cccccc;
             border-radius: 10px;
             padding: 20px;
             margin-top: 20px;
             text-align: left;
-            width: 100%; /* Ocupa todo el ancho del contenedor */
-            box-sizing: border-box; /* Incluye el padding y el borde en el ancho */
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .form-container h3 {
@@ -89,21 +83,29 @@
         }
 
         .form-group {
-            margin-bottom: 15px; /* Espacio estándar entre grupo de pregunta y respuesta */
+            margin-bottom: 15px;
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 5px; /* Espacio entre la pregunta y su campo */
+            margin-bottom: 5px;
             font-weight: bold;
-            color: black; /* COLOR DE LOS TEXTOS DE LAS PREGUNTAS - Ajusta aquí */
-            /* TAMAÑO DEL TEXTO EN EL FORMULARIO (PREGUNTAS) - Ajusta aquí */
+            color: black;
             font-size: 19px;
         }
 
-        /* Aumentar el margen inferior de los campos (input, select, textarea) para separar las preguntas */
         .form-group input,
-        .form-group select,
+        .form-group select {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            border-radius: 5px;
+            border: 2px solid black;
+            background-color: white;
+            font-size: 16px;
+            margin-bottom: 30px;
+        }
+
         .form-group textarea {
             width: 100%;
             padding: 10px;
@@ -112,12 +114,8 @@
             border: 2px solid black;
             background-color: white;
             font-size: 16px;
-            margin-bottom: 30px; /* Aumenta el espacio entre el campo actual y la siguiente pregunta */
-        }
-
-        .form-group textarea {
-            /* AUMENTO DE LA ALTURA DEL CAMPO DE ESCRITURA - Ajusta aquí el valor */
-            min-height: 150px;
+            min-height: 170px; /* Aumento del 13% en la altura */
+            margin-bottom: 30px;
         }
 
         .submit-button {
@@ -130,8 +128,8 @@
             font-size: 16px;
             font-weight: bold;
             width: 100%;
-            margin-top: 10px; /* Espacio entre el último campo y el botón */
-            margin-bottom: 15px; /* Espacio debajo del botón */
+            margin-top: 10px;
+            margin-bottom: 15px;
         }
     </style>
 </head>
