--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             color: white;
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px 1.5mm; /* Margen de 1.5mm en los lados */
+            padding: 20px 1.5mm;
             display: flex;
-            justify-content: center; /* Centra el contenido horizontalmente */
+            justify-content: center;
             align-items: flex-start;
             min-height: 100vh;
             box-sizing: border-box;
@@ -25,8 +25,8 @@
             background-color: transparent;
             text-align: center;
             display: flex;
-            flex-direction: column; /* Apila los elementos verticalmente */
-            align-items: center; /* Centra los elementos dentro del contenedor */
+            flex-direction: column;
+            align-items: center;
         }
 
         /* --- ESTILOS PARA LA IMAGEN DE BIENVENIDA --- */
@@ -39,6 +39,7 @@
             height: auto;
             border-radius: 17px;
             display: block;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra paralela en la foto */
         }
 
         /* --- ESTILOS PARA LOS RECTÁNGULOS DE TEXTO --- */
@@ -95,7 +96,8 @@
         }
 
         .form-group input,
-        .form-group select {
+        .form-group select,
+        .form-group textarea {
             width: 100%;
             padding: 10px;
             box-sizing: border-box;
@@ -105,17 +107,13 @@
             font-size: 16px;
             margin-bottom: 30px;
         }
+        
+        .form-group select {
+            height: 255px; /* Mismo alto que el textarea */
+        }
 
         .form-group textarea {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-            border-radius: 5px;
-            border: 2px solid black;
-            background-color: white;
-            font-size: 16px;
-            min-height: 170px; /* Aumento del 13% en la altura */
-            margin-bottom: 30px;
+            min-height: 255px; /* Aumento del 50% en la altura */
         }
 
         .submit-button {
