--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             height: auto;
             border-radius: 17px;
             display: block;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra paralela en la foto */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
 
-        /* --- ESTILOS PARA LOS RECTÁNGULOS DE TEXTO --- */
+        /* --- ESTILOS PARA LOS RECUADROS DE TEXTO --- */
         .text-rectangle {
             background-color: #f3f0f0;
             border-radius: 10px;
@@ -77,12 +77,6 @@
             box-sizing: border-box;
         }
 
-        .form-container h3 {
-            font-size: 12pt;
-            font-weight: bold;
-            color: black;
-        }
-
         .form-group {
             margin-bottom: 15px;
         }
@@ -95,9 +89,21 @@
             font-size: 19px;
         }
 
-        .form-group input,
-        .form-group select,
-        .form-group textarea {
+        /* Altura de los campos de texto delgados (50% más) */
+        .form-group input {
+            width: 100%;
+            padding: 10px;
+            height: 54px; /* 50% más de alto (original 36px) */
+            box-sizing: border-box;
+            border-radius: 5px;
+            border: 2px solid black;
+            background-color: white;
+            font-size: 16px;
+            margin-bottom: 30px;
+        }
+
+        /* Altura del menú desplegable, volviendo al tamaño original */
+        .form-group select {
             width: 100%;
             padding: 10px;
             box-sizing: border-box;
@@ -108,12 +114,16 @@
             margin-bottom: 30px;
         }
         
-        .form-group select {
-            height: 255px; /* Mismo alto que el textarea */
-        }
-
         .form-group textarea {
-            min-height: 255px; /* Aumento del 50% en la altura */
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            border-radius: 5px;
+            border: 2px solid black;
+            background-color: white;
+            font-size: 16px;
+            min-height: 255px; /* Altura del campo de sugerencias */
+            margin-bottom: 30px;
         }
 
         .submit-button {
