--- a/index.html
+++ b/index.html
@@ -4,142 +4,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenida a la Comunidad</title>
-    <style>
-        /* --- ESTILOS GENERALES Y AJUSTABLES --- */
-        body {
-            background-color: #d927cc;
-            color: white;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px 1.5mm;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            min-height: 100vh;
-            box-sizing: border-box;
-        }
+<style>
+    /* --- ESTILOS GENERALES Y AJUSTABLES --- */
+    html, body {
+        min-height: 100%;
+    }
 
-        .main-container {
-            max-width: 600px;
-            width: 100%;
-            background-color: transparent;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+    body {
+        background-image: linear-gradient(to bottom, #582695, #984af1);
+        background-attachment: fixed; /* Opcional: para que el degradado no se mueva al hacer scroll */
+        color: white;
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 20px 1.5mm;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        min-height: 100vh;
+        box-sizing: border-box;
+    }
 
-        /* --- ESTILOS PARA LA IMAGEN DE BIENVENIDA --- */
-        .welcome-image-container {
-            margin-bottom: 20px;
-            width: 100%;
-        }
-        .welcome-image-container img {
-            width: 100%;
-            height: auto;
-            border-radius: 17px;
-            display: block;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
+    .main-container {
+        max-width: 600px;
+        width: 100%;
+        background-color: transparent;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
-        /* --- ESTILOS PARA LOS RECUADROS DE TEXTO --- */
-        .text-rectangle {
-            background-color: #f3f0f0;
-            border-radius: 10px;
-            padding: 15px;
-            margin-bottom: 10px;
-            text-align: center;
-            color: black;
-            width: 100%;
-            box-sizing: border-box;
-        }
+    /* --- ESTILOS PARA LA IMAGEN DE BIENVENIDA --- */
+    .welcome-image-container {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .welcome-image-container img {
+        width: 100%;
+        height: auto;
+        border-radius: 17px;
+        display: block;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
 
-        .text-rectangle.large {
-            font-size: 23pt;
-            font-weight: normal;
-        }
+    /* --- ESTILOS PARA LOS RECUADROS DE TEXTO --- */
+    .text-rectangle {
+        background-color: #f3f0f0;
+        border-radius: 10px;
+        padding: 15px;
+        margin-bottom: 10px;
+        text-align: center;
+        color: black;
+        width: 100%;
+        box-sizing: border-box;
+    }
 
-        .text-rectangle.small {
-            font-size: 15pt;
-            font-weight: normal;
-            line-height: 1.4;
-        }
+    .text-rectangle.large {
+        font-size: 23pt;
+        font-weight: normal;
+    }
 
-        /* --- ESTILOS PARA EL FORMULARIO --- */
-        .form-container {
-            background-color: #fdd2fd;
-            border: 1px solid #cccccc;
-            border-radius: 10px;
-            padding: 20px;
-            margin-top: 20px;
-            text-align: left;
-            width: 100%;
-            box-sizing: border-box;
-        }
+    .text-rectangle.small {
+        font-size: 15pt;
+        font-weight: normal;
+        line-height: 1.4;
+    }
 
-        .form-group {
-            margin-bottom: 15px;
-        }
+    /* --- ESTILOS PARA EL FORMULARIO --- */
+    .form-container {
+        background-color: #fdd2fd;
+        border: 1px solid #cccccc;
+        border-radius: 10px;
+        padding: 20px;
+        margin-top: 20px;
+        text-align: left;
+        width: 100%;
+        box-sizing: border-box;
+    }
 
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-            color: black;
-            font-size: 19px;
-        }
+    .form-group {
+        margin-bottom: 15px;
+    }
 
-        /* Altura de los campos de texto delgados (50% más) */
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            height: 54px; /* 50% más de alto (original 36px) */
-            box-sizing: border-box;
-            border-radius: 5px;
-            border: 2px solid black;
-            background-color: white;
-            font-size: 16px;
-            margin-bottom: 30px;
-        }
+    .form-group label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
+        color: black;
+        font-size: 19px;
+    }
 
-        /* Altura del menú desplegable, volviendo al tamaño original */
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-            border-radius: 5px;
-            border: 2px solid black;
-            background-color: white;
-            font-size: 16px;
-            margin-bottom: 30px;
-        }
-        
-        .form-group textarea {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-            border-radius: 5px;
-            border: 2px solid black;
-            background-color: white;
-            font-size: 16px;
-            min-height: 255px; /* Altura del campo de sugerencias */
-            margin-bottom: 30px;
-        }
+    /* Altura de los campos de texto delgados (50% más) */
+    .form-group input {
+        width: 100%;
+        padding: 10px;
+        height: 54px; /* 50% más de alto (original 36px) */
+        box-sizing: border-box;
+        border-radius: 5px;
+        border: 2px solid black;
+        background-color: white;
+        font-size: 16px;
+        margin-bottom: 30px;
+    }
 
-        .submit-button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: bold;
-            width: 100%;
-            margin-top: 10px;
-            margin-bottom: 15px;
-        }
-    </style>
+    /* Altura del menú desplegable, volviendo al tamaño original */
+    .form-group select {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        border-radius: 5px;
+        border: 2px solid black;
+        background-color: white;
+        font-size: 16px;
+        margin-bottom: 30px;
+    }
+    
+    .form-group textarea {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        border-radius: 5px;
+        border: 2px solid black;
+        background-color: white;
+        font-size: 16px;
+        min-height: 255px; /* Altura del campo de sugerencias */
+        margin-bottom: 30px;
+    }
+
+    .submit-button {
+        background-color: #4CAF50;
+        color: white;
+        padding: 15px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: bold;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
+</style>
 </head>
 <body>
 
