--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <div class="main-container">
     <div class="welcome-image-container">
-        <img src="images/isabel-nocturna-bienvenida.jpg" alt="Isabel Nocturna Bienvenida">
+        <img src="images/chica-nocturna-bienvenida.jpg" alt="Chica Nocturna Bienvenida">
     </div>
 
     <div class="text-rectangle large">
