--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
 
     <div class="text-rectangle small">
-        🟢 Te felicito por tus ganas de aprender. Recuerda que tu único Asesor es Alberto Salinas.
+        🟢 <b>Te felicito por tus ganas de aprender. Recuerda que tu único Asesor es Alberto Salinas.<b>
     </div>
 
     <div class="text-rectangle small">
