--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
     </div>
 
     <div class="text-rectangle small">
-        ❌ ☝🏼No te salgas del grupo por que perderás todo acceso, no te quedes atrás, tú puedes lograr y convertirte en esa confeccionista profesional que tando deseaste ser.
+        ❌ ☝🏼<b>No te salgas del grupo<b> por que perderás todo acceso, <b>no te quedes atrás,<b> tú puedes lograr y convertirte en esa confeccionista profesional que tando deseaste ser.
     </div>
 
     <div class="text-rectangle small">
-        🧵💖 #Yo si puedo #Por que soy yo y me lo merezco
+        🧵💖 <b>#Yo si puedo #Por que soy yo y me lo merezco.<b>
     </div>
 
     <div class="text-rectangle small">
-        🔵 Te invito a responder estas preguntas, que tu respuesta nos ayudará a conocer más de tí y ayudarte. 😊👇🏼
+        🔵 <b>Te invito a responder estas preguntas,<b> que tu respuesta nos ayudará a conocer más de tí y ayudarte. 😊👇🏼
     </div>
 
     <div class="form-container">
