--- a/index.html
+++ b/index.html
@@ -158,19 +158,19 @@
     </div>
 
     <div class="text-rectangle small">
-        🟢 <b>Te felicito por tus ganas de aprender. Recuerda que tu único Asesor es Alberto Salinas.<b>
+        🟢 <b>Te felicito por tus ganas de aprender. Recuerda que tu único Asesor es Alberto Salinas.</b>
     </div>
 
     <div class="text-rectangle small">
-        ❌ ☝🏼<b>No te salgas del grupo<b> por que perderás todo acceso, <b>no te quedes atrás,<b> tú puedes lograr y convertirte en esa confeccionista profesional que tando deseaste ser.
+        ❌ ☝🏼<b>No te salgas del grupo</b> por que perderás todo acceso, <b>no te quedes atrás,</b>b> tú puedes lograr y convertirte en esa confeccionista profesional que tando deseaste ser.
     </div>
 
     <div class="text-rectangle small">
-        🧵💖 <b>#Yo si puedo #Por que soy yo y me lo merezco.<b>
+        🧵💖 <b>#Yo si puedo #Por que soy yo y me lo merezco.</b>b>
     </div>
 
     <div class="text-rectangle small">
-        🔵 <b>Te invito a responder estas preguntas,<b> que tu respuesta nos ayudará a conocer más de tí y ayudarte. 😊👇🏼
+        🔵 <b>Te invito a responder estas preguntas,</b>b> que tu respuesta nos ayudará a conocer más de tí y ayudarte. 😊👇🏼
     </div>
 
     <div class="form-container">
