--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>
 
     <div class="text-rectangle small">
-        🔵 <b>Te invito a responder estas preguntas,</b> que tu respuesta nos ayudará a conocer más de tí y ayudarte. 😊👇🏼
+        🔵 <b>Te invito a responder estas preguntas,</b> que tu respuesta nos ayudará a conocer más de tí y orientarte. 😊👇🏼
     </div>
 
     <div class="form-container">
