--- a/index.html
+++ b/index.html
@@ -1,213 +1,226 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenida a la Comunidad</title>
-<style>
-    /* --- ESTILOS GENERALES Y AJUSTABLES --- */
-    html, body {
-        min-height: 100%;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bienvenida a la Comunidad</title>
+    <style>
+        /* --- ESTILOS GENERALES Y AJUSTABLES --- */
+        html, body {
+            min-height: 100%;
+        }
 
-    body {
-        background-image: linear-gradient(to bottom, #582695, #984af1);
-        background-attachment: fixed; /* Opcional: para que el degradado no se mueva al hacer scroll */
-        color: white;
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 20px 2.5mm;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        min-height: 100vh;
-        box-sizing: border-box;
-    }
+        body {
+            background-image: linear-gradient(to bottom, #582695, #984af1);
+            background-attachment: fixed; /* Opcional: para que el degradado no se mueva al hacer scroll */
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px 2.5mm;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            min-height: 100vh;
+            box-sizing: border-box;
+        }
 
-    .main-container {
-        max-width: 600px;
-        width: 100%;
-        background-color: transparent;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+        .main-container {
+            max-width: 600px;
+            width: 100%;
+            background-color: transparent;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
 
-    /* --- ESTILOS PARA LA IMAGEN DE BIENVENIDA --- */
-    .welcome-image-container {
-        margin-bottom: 20px;
-        width: 100%;
-    }
-    .welcome-image-container img {
-        width: 100%;
-        height: auto;
-        border-radius: 17px;
-        display: block;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
+        /* --- ESTILOS PARA LA IMAGEN DE BIENVENIDA --- */
+        .welcome-image-container {
+            margin-bottom: 20px;
+            width: 100%;
+        }
+        .welcome-image-container img {
+            width: 100%;
+            height: auto;
+            border-radius: 17px;
+            display: block;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
 
-    /* --- ESTILOS PARA LOS RECUADROS DE TEXTO --- */
-    .text-rectangle {
-        background-color: #f3f0f0;
-        border-radius: 10px;
-        padding: 15px;
-        margin-bottom: 10px;
-        text-align: center;
-        color: black;
-        width: 100%;
-        box-sizing: border-box;
-    }
+        /* --- ESTILOS PARA LOS RECUADROS DE TEXTO --- */
+        .text-rectangle {
+            background-color: #f3f0f0;
+            border-radius: 10px;
+            padding: 15px;
+            margin-bottom: 10px;
+            text-align: center;
+            color: black;
+            width: 100%;
+            box-sizing: border-box;
+        }
 
-    .text-rectangle.large {
-        font-size: 23pt;
-        font-weight: normal;
-    }
+        .text-rectangle.large {
+            font-size: 23pt;
+            font-weight: normal;
+        }
 
-    .text-rectangle.small {
-        font-size: 15pt;
-        font-weight: normal;
-        line-height: 1.4;
-    }
+        .text-rectangle.small {
+            font-size: 15pt;
+            font-weight: normal;
+            line-height: 1.4;
+        }
 
-    /* --- ESTILOS PARA EL FORMULARIO --- */
-    .form-container {
-        background-color: #fdd2fd;
-        border: 1px solid #cccccc;
-        border-radius: 10px;
-        padding: 20px;
-        margin-top: 20px;
-        text-align: left;
-        width: 100%;
-        box-sizing: border-box;
-    }
+        /* --- ESTILOS PARA EL FORMULARIO --- */
+        .form-container {
+            background-color: #d4f1fe; /* CAMBIO: Nuevo color de fondo del formulario */
+            border: 1px solid #cccccc;
+            border-radius: 10px;
+            padding: 20px;
+            margin-top: 20px;
+            text-align: left;
+            width: 100%;
+            box-sizing: border-box;
+        }
 
-    .form-group {
-        margin-bottom: 15px;
-    }
+        .form-group {
+            margin-bottom: 15px;
+        }
 
-    .form-group label {
-        display: block;
-        margin-bottom: 5px;
-        font-weight: bold;
-        color: black;
-        font-size: 19px;
-    }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+            color: black;
+            font-size: 19px;
+        }
 
-    /* Altura de los campos de texto delgados (50% más) */
-    .form-group input {
-        width: 100%;
-        padding: 10px;
-        height: 54px; /* 50% más de alto (original 36px) */
-        box-sizing: border-box;
-        border-radius: 5px;
-        border: 2px solid black;
-        background-color: white;
-        font-size: 16px;
-        margin-bottom: 30px;
-    }
+        /* Altura de los campos de texto delgados (50% más) */
+        .form-group input,
+        .form-group select {
+            width: 100%;
+            padding: 10px;
+            height: 54px; /* 50% más de alto (original 36px) */
+            box-sizing: border-box;
+            border-radius: 5px;
+            border: 2px solid black;
+            background-color: white;
+            font-size: 19px; /* CAMBIO: Aumenta el tamaño del texto */
+            margin-bottom: 30px;
+        }
+        
+        .form-group textarea {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            border-radius: 5px;
+            border: 2px solid black;
+            background-color: white;
+            font-size: 19px; /* CAMBIO: Aumenta el tamaño del texto */
+            min-height: 255px; /* Altura del campo de sugerencias */
+            margin-bottom: 30px;
+        }
 
-    /* Altura del menú desplegable, volviendo al tamaño original */
-    .form-group select {
-        width: 100%;
-        padding: 10px;
-        box-sizing: border-box;
-        border-radius: 5px;
-        border: 2px solid black;
-        background-color: white;
-        font-size: 16px;
-        margin-bottom: 30px;
-    }
-    
-    .form-group textarea {
-        width: 100%;
-        padding: 10px;
-        box-sizing: border-box;
-        border-radius: 5px;
-        border: 2px solid black;
-        background-color: white;
-        font-size: 16px;
-        min-height: 255px; /* Altura del campo de sugerencias */
-        margin-bottom: 30px;
-    }
-
-    .submit-button {
-        background-color: #4CAF50;
-        color: white;
-        padding: 15px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        font-weight: bold;
-        width: 100%;
-        margin-top: 10px;
-        margin-bottom: 15px;
-    }
+        .submit-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            width: 100%;
+            margin-top: 10px;
+            margin-bottom: 15px;
+        }
 </style>
 </head>
 <body>
 
 <div class="main-container">
+    <div class="welcome-image-container">
+        <img src="images/chica-nocturna-bienvenida.jpg" alt="Chica Nocturna Bienvenida">
+    </div>
+
+    <div class="text-rectangle large">
+        🎉 ¡BIENVENIDA A LA COMUNIDAD! 🤗✨
+    </div>
+
+    <div class="text-rectangle small">
+        🟢 <b>Te felicito por tus ganas de aprender. Recuerda que tu único Asesor es Alberto Salinas.</b>
+    </div>
+
+    <div class="text-rectangle small">
+        ❌ ☝🏼<b>No te salgas del grupo</b> por que perderás todo acceso, <b>no te quedes atrás,</b> tú puedes lograr y convertirte en esa confeccionista profesional que tando deseaste ser.
+    </div>
+
+    <div class="text-rectangle small">
+        🧵💖 <b>#Yo si puedo #Por que soy yo y me lo merezco.</b>
+    </div>
+
     <div class="welcome-image-container">
-        <img src="images/chica-nocturna-bienvenida.jpg" alt="Chica Nocturna Bienvenida">
+        <img src="images/cuentame-acerca-de-ti.png" alt="Cuéntame acerca de ti">
     </div>
 
-    <div class="text-rectangle large">
-        🎉 ¡BIENVENIDA A LA COMUNIDAD! 🤗✨
-    </div>
+    <div class="text-rectangle small">
+        🔵 <b>Te invito a responder estas preguntas,</b> que tu respuesta nos ayudará a conocer más de tí y orientarte. 😊👇🏼
+    </div>
 
-    <div class="text-rectangle small">
-        🟢 <b>Te felicito por tus ganas de aprender. Recuerda que tu único Asesor es Alberto Salinas.</b>
-    </div>
+    <div class="form-container">
+        <form>
+                        <div class="form-group">
+                <label for="nombre-pais">1️⃣ ¿Cuál es tu nombre y de qué país nos visitas? 😊 🇵🇪 🇨🇴 🇪🇨 🇲🇽 🇨🇱 🇧🇴 🇬🇹</label>
+                <input type="text" id="nombre-pais" name="nombre-pais" placeholder="Tu Respuesta">
+            </div>
 
-    <div class="text-rectangle small">
-        ❌ ☝🏼<b>No te salgas del grupo</b> por que perderás todo acceso, <b>no te quedes atrás,</b> tú puedes lograr y convertirte en esa confeccionista profesional que tando deseaste ser.
-    </div>
+            <div class="form-group">
+                <label for="asesor">2️⃣ Ya sabes que Alberto Salinas es tu Asesor? 😎</label>
+                <input type="text" id="asesor" name="asesor" placeholder="Tu Respuesta">
+            </div>
 
-    <div class="text-rectangle small">
-        🧵💖 <b>#Yo si puedo #Por que soy yo y me lo merezco.</b>
-    </div>
+            <div class="form-group">
+                <label for="formulario">3️⃣ Recibiste tu formulario de Patronaje Premium? 📘</label>
+                <input type="text" id="formulario" name="formulario" placeholder="Tu Respuesta">
+            </div>
 
-    <div class="text-rectangle small">
-        🔵 <b>Te invito a responder estas preguntas,</b> que tu respuesta nos ayudará a conocer más de tí y orientarte. 😊👇🏼
-    </div>
+            <div class="form-group">
+                <label for="experiencia">4️⃣ Cuál es tu nivel de Experiencia, Principiante, Intermedia o Avanzada? 😊</label>
+                <input type="text" id="experiencia" name="experiencia" placeholder="Tu Respuesta">
+            </div>
 
-    <div class="form-container">
-        <form>
-            <div class="form-group">
-                <label for="nombre">1️⃣ ¿Cuál es tu Nombre? 😊</label>
-                <input type="text" id="nombre" name="nombre">
-            </div>
+            <div class="form-group">
+                <label for="sesion">5️⃣ Estas lista para tu primera sesión o tienes un poco de temor?</label>
+                <input type="text" id="sesion" name="sesion" placeholder="Tu Respuesta">
+            </div>
 
-            <div class="form-group">
-                <label for="pais">2️⃣ ¿De qué país nos visitas? 🇵🇪 🇨🇴 🇪🇨 🇲🇽 🇨🇱 🇧🇴 🇬🇹</label>
-                <input type="text" id="pais" name="pais">
-            </div>
+            <div class="form-group">
+                <label for="prenda">6️⃣ Que prenda de vestir te gustaría aprender? 👗👖👕👚</label>
+                <input type="text" id="prenda" name="prenda" placeholder="Tu Respuesta">
+            </div>
 
-            <div class="form-group">
-                <label for="telefono">3️⃣ 📞 Número de Teléfono 📲</label>
-                <input type="tel" id="telefono" name="telefono">
-            </div>
+            <div class="form-group">
+                <label for="clase">7️⃣ Te sientes lista para tu primera clase 👩🏻‍🎓👨‍🎓 o aún no? 😨</label>
+                <input type="text" id="clase" name="clase" placeholder="Tu Respuesta">
+            </div>
 
-            <div class="form-group">
-                <label for="medidas">4️⃣ Ya sabes como tomar las Medidas Corporales? 📐📏</label>
-                <select id="medidas" name="medidas">
-                    <option value="" disabled selected>Selecciona una opción</option>
-                    <option value="si">✅ Sí, lo sé hacer.</option>
-                    <option value="confundo">🔶 Lo he visto, pero me confundo a veces.</option>
-                    <option value="no">❌ No, aún no sé cómo hacerlo.</option>
-                </select>
-            </div>
+            <div class="form-group">
+                <label for="no-gusta">8️⃣ Qué es lo que no te gusta en el grupo? 😰</label>
+                <input type="text" id="no-gusta" name="no-gusta" placeholder="Tu Respuesta">
+            </div>
 
-            <div class="form-group">
-                <label for="sugerencias">5️⃣ Sugiérenos en que podríamos mejorar 😊</label>
-                <textarea id="sugerencias" name="sugerencias"></textarea>
-            </div>
+            <div class="form-group">
+                <label for="maestra">9️⃣ Ya conocías a la Maestra Isabel? 💁🏻‍♀️✂️👚</label>
+                <input type="text" id="maestra" name="maestra" placeholder="Tu Respuesta">
+            </div>
 
-            <button type="submit" class="submit-button">Enviar Respuesta</button>
-        </form>
-    </div>
+            <div class="form-group">
+                <label for="sugerencias">1️⃣0️⃣ Envíanos un mensaje 😊</label>
+                <textarea id="sugerencias" name="sugerencias" placeholder="Tu Respuesta"></textarea>
+            </div>
+
+            <button type="submit" class="submit-button">Enviar Respuesta</button>
+        </form>
+    </div>
 </div>
 
 </body>
