--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <select id="formulario-importancia" name="formulario-importancia">
                 <option value="" disabled selected hidden>Selecciona una opción</option>
                 <option value="no-sabia">No lo sabía 😱❌</option>
-                <option value="ahora-se">Ahora sé que es importante 😊✅</option>
+                <option value="ahora-se">Sí lo sé 😊✅</option>
             </select>
         </div>
 
