--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 
     function hideKeyboard() {
         const mensajeTextarea = document.getElementById('mensaje');
-        mensajeTextarea.blur(); // Esto oculta el teclado
-        toggleDoneButton(); // Oculta el botón "Listo"
+        mensajeTextarea.blur();
+        toggleDoneButton();
     }
 </script>
 
