--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
     .done-button {
         position: absolute;
         right: 15px;
-        bottom: 45px;
+        /* Se ajusta a la parte superior del textarea */
+        top: 45px;
         background-color: #4CAF50;
         color: white;
         border: none;
