--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                 <label for="formulario-importancia">5️⃣ Sabías que el formulario de Patronaje es importante para que aprendas tu primera toma de medidas y hacer tu primer patrón de costura? ✂️👚</label>
                 <select id="formulario-importancia" name="formulario-importancia">
                     <option value="" disabled selected hidden>Selecciona una opción</option>
-                    <option value="no-sabia">No lo sabía, soy nueva 🙂‍↔️</option>
-                    <option value="ahora-se">Sí lo sabía 😊</option>
+                    <option value="no-sabia">No lo sabía, soy nueva 😊</option>
+                    <option value="ahora-se">Sí lo sabía 😉</option>
                 </select>
             </div>
 
