--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <p style="color: red; font-size: 14px; margin-top: -10px;">
             * Todos los campos son obligatorios
         </p>
-        <form>
+        <form action="https://script.google.com/macros/s/AKfycbxrI7FqEGnbekaTfnJSKn-CNKB0cK8graaGBDxrUd23OaocZCQkLSIioF3v2nC-_XqYIw/exec" method="POST">
             <div class="form-group">
                 <label for="nombre">1️⃣ ¿Cuál es tu nombre?<span class="required-asterisk">*</span></label>
                 <input type="text" id="nombre" name="nombre" placeholder="Tu respuesta" required>
