--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
 
     <div class="welcome-image-container no-shadow">
-        <img src="images/cuentame-acerca-de-ti.png" alt="Cuéntame acerca de ti">
+        <img src="images/cuentame-acerca-de-ti.jpg" alt="Cuéntame acerca de ti">
     </div>
 
     <div class="text-rectangle small">
