--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
         🧵💖 <b>#Yo si puedo #Por que soy yo y me lo merezco.</b>
     </div>
 
+<!-- SEPARADOR MANUAL -->
+<div style="height: 20px;"></div>
+
+    
     <div class="welcome-image-container no-shadow">
         <img src="images/cuentame-acerca-de-ti.jpg" alt="Cuéntame acerca de ti">
     </div>
